
dist_doc_DALY_DATA =    apl_kbd.texi            \
                        apl-library.info        \
                        apl-library.texi        \
                        apl-pkg-mgr.texi        \
                        arg_parser.texi         \
                        assert.texi             \
                        cfg.texi                \
                        cl.texi                 \
                        date.texi               \
                        dom.texi                \
                        export.texi             \
                        fdl-1.3.texi            \
                        finance.texi            \
                        fmt.texi                \
                        html.texi               \
                        import.texi             \
                        lex1.texi               \
                        lex.texi                \
                        lpr.texi

doc_DALYdir = $(pkglibdir)/doc/DALY

