
dist_wslib3_DALY_DATA = date.apl        \
                        fin.apl         \
                        fmt.apl         \
                        lex.apl         \
                        seq.apl         \
                        stack.apl       \
                        stat.apl        \
                        xml.apl

wslib3_DALYdir = $(pkglibdir)/wslib3/DALY

