
dist_wslib5_DALY_DATA = aparse.apl              \
                        assert.apl              \
                        cfg.apl                 \
                        cl.apl                  \
                        dom.apl                 \
                        export.apl              \
                        fin.apl                 \
                        find_test_data.apl      \
                        import.apl              \
                        lpr.apl                 \
                        pref.apl                \
                        prompt.apl              \
                        pw.apl                  \
                        utf8.apl                \
                        utl.apl                 \
                        wblg.apl                \
                        wsinit.apl


wslib5_DALYdir = $(pkglibdir)/wslib5/DALY

